Wed Mar  8 14:26:51 MST 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/preferences-page-dcc.c:
	* src/fe-gnome/main-window.c:
	* src/fe-gnome/preferences-dialog.c:
	* src/fe-gnome/preferences-dialog.h:
	* src/fe-gnome/preferences-page-irc.c:
	* src/fe-gnome/gui.h:
	* src/fe-gnome/preferences-page-colors.c:
	* src/fe-gnome/preferences-page-colors.h:
	* data/preferences-dialog.glade:
	  - A variety of improvements to the preferences dialog.  This fixes
	    some non-HIG spacing, ugliness from size groups, and modality.

Wed Mar  8 01:24:22 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c:
	  - Make the userlist popup xinerama-happy

Wed Mar  8 00:47:54 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* plugins/autoaway/xscreensaver.c:
	* plugins/notify-osd/notify-osd.c:
	* src/fe-gnome/text-entry.c:
	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/channel-list.c:
	* src/fe-gnome/plugins.c:
	  - Fix a variety of warnings, ranging from 64-bit compatibility stuff
	    to not including <string.h> in the right places.

Wed Mar  8 00:34:15 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* data/topic-change.glade:
	  - Disallow tabs in the topic input box, which makes the box much
	    more usable with the keyboard.
	* src/fe-gnome/topic-label.c:
	  - Make it so typing enter into the topic change box activates the
	    default response for the dialog, since newlines are meaningless in
	    IRC topics.

Sun Mar  5 11:28:31 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* configure.ac:
	  - Change libsexy version dependency to 0.1.6 because SexyTreeView
	    widget is only available since this release.

Sun Mar  5 01:34:09 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/navigation-tree.c:
	* data/xchat-gnome.glade:
	  - Use SexyTreeView for the userlist and so display a very cute
	    tooltip containing user's informations.
